--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,24 @@
-# HTTP
+# HTTP - cấu hình cổng và máy chủ cho dịch vụ
 PORT=8080
 HOST=0.0.0.0
 NODE_ENV=production
 
-# DB
+# CƠ SỞ DỮ LIỆU - chuỗi kết nối PostgreSQL
 DATABASE_URL=postgresql://asi:asi@db:5432/asi?schema=public
 
-# REDIS
+# REDIS - cấu hình máy chủ Redis dùng cho cache và hàng đợi
 REDIS_URL=redis://redis:6379
 
-# CMS
+# CMS - webhook và khóa HMAC cho hệ thống CMS
 CMS_ENDPOINT=https://cms.example.com/attendance/webhook
 CMS_HMAC_KEY=change_me
 
-# INBOUND (thiết bị -> gateway)
+# LUỒNG VÀO (thiết bị -> gateway) - thông tin xác thực và danh sách IP được phép
 INBOUND_BASIC_USER=asi
 INBOUND_BASIC_PASS=strong_password
 ALLOWLIST_CIDRS=10.0.0.0/8,192.168.0.0/16
 
-# DEVICE TLS (optional mTLS)
+# TLS CHO THIẾT BỊ (mTLS tùy chọn) - bật TLS và chỉ định đường dẫn chứng chỉ
 TLS_ENABLE=false
 TLS_KEY_PATH=/certs/server.key
 TLS_CERT_PATH=/certs/server.crt
