feat: add CMS HRM sync route and docs

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,11 @@ REDIS_URL=redis://redis:6379
 CMS_ENDPOINT=https://cms.example.com/attendance/webhook
 CMS_HMAC_KEY=change_me
 
+# CMS HRM API - endpoint lấy danh sách nhân sự
+CMS_HRM_ENDPOINT=https://dev.api.hrm.unicloudgroup.com.vn/api/v1/faceid/GetEmployees
+# Token/bearer nếu API yêu cầu
+CMS_HRM_AUTH_HEADER=
+
 # LUỒNG VÀO (thiết bị -> gateway) - thông tin xác thực và danh sách IP được phép
 INBOUND_BASIC_USER=asi
 INBOUND_BASIC_PASS=strong_password
