--- a/package.json
+++ b/package.json
@@ -16,23 +16,25 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "fastify": "^4.28.1",
+    "bullmq": "^5.6.3",
     "dotenv": "^16.4.5",
-    "pino": "^8.17.0",
+    "fastify": "^4.28.1",
     "ioredis": "^5.3.2",
-    "bullmq": "^5.6.3"
+    "node-fetch": "^2.6.9",
+    "pino": "^8.17.0"
   },
   "devDependencies": {
+    "@prisma/client": "^5.13.0",
     "@types/node": "^20.11.30",
+    "@types/node-fetch": "^2.6.4",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
+    "prisma": "^5.13.0",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.0",
     "tsx": "^4.7.1",
-    "vitest": "^1.4.0",
-    "supertest": "^6.3.3",
-    "prisma": "^5.13.0",
-    "@prisma/client": "^5.13.0"
+    "typescript": "^5.4.0",
+    "vitest": "^1.4.0"
   }
 }
