--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "fastify": "^4.28.1",
     "ioredis": "^5.3.2",
     "node-fetch": "^2.6.9",
-    "pino": "^8.17.0"
+    "p-limit": "^7.1.1",
+    "pino": "^8.17.0",
+    "sharp": "^0.34.3",
+    "undici": "^7.16.0"
   },
   "devDependencies": {
     "@prisma/client": "^5.13.0",
