--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,6 @@
-version: '3.9'
+version: "3.9"
+
 services:
-  app:
-    build: .
-    ports:
-      - '8080:8080'
-    env_file:
-      - .env.example
-    depends_on:
-      - db
-      - redis
   db:
     image: postgres:16-alpine
     environment:
@@ -16,13 +8,52 @@ services:
       POSTGRES_PASSWORD: asi
       POSTGRES_DB: asi
     ports:
-      - '5432:5432'
+      - "5432:5432"  # dev: expose ra ngoài; có thể bỏ nếu chỉ dùng nội bộ
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U asi -d asi || exit 1"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+
   redis:
     image: redis:7-alpine
+    command: ["redis-server", "--appendonly", "yes"]
     ports:
-      - '6379:6379'
+      - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
+
+  app:
+    build: .
+    ports:
+      - "8080:8080"
+    env_file:
+      - .env             # dùng .env thật, đừng dùng .env.example khi chạy
+    environment:
+      # override để chắc chắn đúng host trong mạng compose
+      DATABASE_URL: "postgresql://asi:asi@db:5432/asi?schema=public"
+      REDIS_URL: "redis://redis:6379"
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    # volumes:
+    #   - .:/usr/src/app  # dev hot-reload, nếu cần
+
   adminer:
     image: adminer
     restart: always
     ports:
-      - '8081:8080'
+      - "8081:8080"
+    depends_on:
+      db:
+        condition: service_healthy
+
+volumes:
+  pgdata:
