sua loi ket noi voi firebase

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - .env             # dùng .env thật, đừng dùng .env.example khi chạy
     environment:
       # override để chắc chắn đúng host trong mạng compose
+      HTTP_CONCURRENCY: "5"   # thử 3-8, tăng dần nếu ổn
       NODE_OPTIONS: "--dns-result-order=ipv4first"
       DATABASE_URL: "postgresql://asi:asi@db:5432/asi?schema=public"
       REDIS_URL: "redis://redis:6379"
