--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,16 +34,19 @@ services:
       - .env             # dùng .env thật, đừng dùng .env.example khi chạy
     environment:
       # override để chắc chắn đúng host trong mạng compose
+      NODE_EXTRA_CA_CERTS: "/app/certs/dahua-ca.crt"
       HTTP_CONCURRENCY: "5"   # thử 3-8, tăng dần nếu ổn
       NODE_OPTIONS: "--dns-result-order=ipv4first"
       DATABASE_URL: "postgresql://asi:asi@db:5432/asi?schema=public"
       REDIS_URL: "redis://redis:6379"
+      
     depends_on:
       db:
         condition: service_healthy
       redis:
         condition: service_healthy
-    # volumes:
+    volumes:
+       - ./certs:/app/certs:ro
     #   - .:/usr/src/app  # dev hot-reload, nếu cần
 
   adminer:
