--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^5.22.0",
     "bullmq": "^5.6.3",
     "dotenv": "^16.4.5",
+    "form-data": "^4.0.0",
     "fastify": "^4.28.1",
     "ioredis": "^5.3.2",
     "p-limit": "^7.1.1",
